# Medical-AI

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.py
admin/: config.py  main.py  requirements.txt
admin/api/: admin.py
admin/core/: audit_logger.py  auth.py  security.py
admin/database/: admin_db.py
admin/frontend/: admin.html  login.html
admin/services/: compliance_monitor.py  dashboard_service.py  qos_service.py  session_analytics.py  system_ops.py
backend/: config.py  main.py  requirements.txt
backend/api/: auth.py  chat.py  health.py  map.py  report.py  session.py
backend/core/: __init__.py  exception_handler.py  logging.py
backend/database/: __init__.py  chat_repo.py  connection.py  health_repo.py  knowledge_repo.py  report_repo.py  session_repo.py  user_repo.py
backend/services/: __init__.py  auth_service.py  chat_pipeline.py  compliance_service.py  health_service.py  knowledge_loader.py  llm_service.py  map_service.py  multimodal_service.py  rag_service.py  report_service.py  speech_service.py  triage_service.py  web_search.py
docs/: ADMIN_SYSTEM_INSTRUCTION.md  ARCHITECTURE.md  测试_图片功能.md  移动端部署指南_后端零改动.md
frontend/: diagnose.html  index.html  login.html  map.html  report.html  sw.js
frontend/css/: chat.css  common.css  map.css  report.css
frontend/icons/: generate_icons.py
frontend/js/: chat.js  common.js
mobile-app/: capacitor.config.json  package-lock.json  package.json
mobile-app/www/: index.html  login.html  (+1 more)
scripts/: start.bat
shared/: auth_utils.py
tests/: test_chat.py
知识库/: 系统能力边界与回答规范.md
(+17 files in other folders)
